--- a/index.html
+++ b/index.html
@@ -397,6 +397,10 @@
 					<a href="https://peggalex.github.io/rachel.html" target="_blank">https://peggalex.github.io/rachel.html</a>
 					<br>
 					<br>
+					<h1>Hong Kong SVG animation</h1>
+					<a href="https:/peggalex.github.io/hk" target="_blank">https:/peggalex.github.io/hk</a>
+					<br>
+					<br>
 					<h1>Other</h1>
 					<a href="https://github.com/peggalex" target="_blank">https://github.com/peggalex</a>
 
