--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 					<br>
 					<h1>Other</h1>
 					<a href="https://github.com/peggalex" target="_blank">https://github.com/peggalex</a>
-
+				</div>
 				<div class='contact content' id='content_contact'>
 					<h1>Email</h1>
 					<a href='mailto:alex.pegg@mail.utoronto.ca'>alex.pegg@mail.utoronto.ca</a>
