--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 					<p>I'm majoring in both computer science and economics for an honorary bachelors of science. I've been a TA for CSC108, and it's all downhill from here</p>
 					<br>
 					<h1>Interests</h1>
-					<p>I like tv and video games. I love The Office, Community and Would I Lie to You. I also like drinking and eating at places I can't afford.</p>
+					<p>I like chicken nuggets and apple pies</p>
 					<br>
 				</div>
 				<div class='projects content' id='content_projects'>
@@ -398,7 +398,7 @@
 					<br>
 					<br>
 					<h1>Hong Kong SVG animation</h1>
-					<a href="https:/peggalex.github.io/hk" target="_blank">https:/peggalex.github.io/hk</a>
+					<a href="https:/peggalex.github.io/hk" target="_blank">https:/peggalex.github.io/hk (work in progress, recommend firefox)</a>
 					<br>
 					<br>
 					<h1>Other</h1>
