--- a/index.html
+++ b/index.html
@@ -413,7 +413,9 @@
 					<br><br>
 					<h1>GitHub</h1>
 					<a href='https://github.com/peggalex>peggalex'>peggalex -- github</h1>
-					<br><br>	
+					<br><br>
+					<h1>Latex Resume</h1>
+					<a href='https://www.overleaf.com/read/kttybhdbwppk'>overleaf pdf viewer</a>
 				</div>
 			</div>
 		</div>
