--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 					<a href='https://www.linkedin.com/in/alexander-pegg-68b954163/'>Alexander Pegg -- LinkedIn</a>
 					<br><br>
 					<h1>GitHub</h1>
-					<a href='https://github.com/peggalex>peggalex'>peggalex -- github</h1>
+					<a href='https://github.com/peggalex>peggalex'>peggalex -- github</h1></a>
 					<br><br>
 					<h1>Latex Resume</h1>
 					<a href='https://www.overleaf.com/read/kttybhdbwppk'>overleaf pdf viewer</a>
