--- a/index.html
+++ b/index.html
@@ -409,13 +409,13 @@
 					<a href='mailto:alex.pegg@mail.utoronto.ca'>alex.pegg@mail.utoronto.ca</a>
 					<br><br>
 					<h1>LinkedIn</h1>
-					<a href='https://www.linkedin.com/in/alexander-pegg-68b954163/'>Alexander Pegg -- LinkedIn</a>
+					<a href='https://www.linkedin.com/in/alexander-pegg-68b954163/' target="_blank">Alexander Pegg -- LinkedIn</a>
 					<br><br>
 					<h1>GitHub</h1>
-					<a href='https://github.com/peggalex>peggalex'>peggalex -- github</h1></a>
+					<a href='https://github.com/peggalex'>peggalex -- github target="_blank"</a>
 					<br><br>
 					<h1>Latex Resume</h1>
-					<a href='https://www.overleaf.com/read/kttybhdbwppk'>overleaf pdf viewer</a>
+					<a href='https://www.overleaf.com/read/kttybhdbwppk' target="_blank">overleaf pdf viewer</a>
 				</div>
 			</div>
 		</div>
