--- a/index.html
+++ b/index.html
@@ -391,14 +391,24 @@
 				<div class='projects content' id='content_projects'>
 					<h1>2048 Game</h1>
 					<a href="https://peggalex.github.io/test2048" target="_blank">https://peggalex.github.io/test2048</a>
+					<p>Comprehensive model/view/controller game that uses arrow key event listeners (controller) to update game state (model) and display it in an animated fluid ui (view)</p>
 					<br>
 					<br>
 					<h1>Simple grade calculator</h1>
 					<a href="https://peggalex.github.io/rachel.html" target="_blank">https://peggalex.github.io/rachel.html</a>
+					<p>Calculate final grade given marks and weights</p>
+					<p>Additionally, assumes grades are normally distributed and predict future grades</p>
 					<br>
 					<br>
 					<h1>Hong Kong SVG animation</h1>
-					<a href="https:/peggalex.github.io/hk" target="_blank">https:/peggalex.github.io/hk (work in progress, recommend firefox)</a>
+					<a href="https:/peggalex.github.io/hk" target="_blank">https:/peggalex.github.io/hk</a>
+					<p>SVG artwork of Victoria Harbour in Hong Kong, animated using CSS</p>
+					<p>Work in progress, recommend firefox for optimal SVG performance</p>
+					<br>
+					<br>
+					<h1>HTML Resume</h1>
+					<a href="https://github.com/resume3.html" target="_blank">https://github.com/resume3.html</a>
+					<p> Webfonts unpredictable in Safari, Firefox - recommend chrome or compiled pdf <a href="https://peggalex.github.io/alex_pegg_resume.pdf>here</p>
 					<br>
 					<br>
 					<h1>Other</h1>
@@ -412,10 +422,12 @@
 					<a href='https://www.linkedin.com/in/alexander-pegg-68b954163/' target="_blank">Alexander Pegg -- LinkedIn</a>
 					<br><br>
 					<h1>GitHub</h1>
-					<a href='https://github.com/peggalex'>peggalex -- github target="_blank"</a>
+					<a href='https://github.com/peggalex' target="_blank">peggalex -- github</a>
 					<br><br>
 					<h1>Latex Resume</h1>
-					<a href='https://www.overleaf.com/read/kttybhdbwppk' target="_blank">overleaf pdf viewer</a>
+					<a href='https://www.overleaf.com/read/kttybhdbwppk' target="_blank">LaTeX resume (professional)</a>
+					<a href='https://peggalex.github.io/alex_pegg_resume.pdf' target="_blank">html resume (stylized)</a>
+
 				</div>
 			</div>
 		</div>
