--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 					<br>
 					<h1>HTML Resume</h1>
 					<a href="https://peggalex.github.io/resume3.html" target="_blank">https://peggalex.github.com/resume3.html</a>
-					<p> Webfonts unpredictable in Safari, Firefox - recommend chrome or compiled pdf <a href="https://peggalex.github.io/alex_pegg_resume.pdf>here</a></p>
+					<p> Webfonts unpredictable in Safari, Firefox - recommend chrome or compiled pdf <a href="https://peggalex.github.io/alex_pegg_resume.pdf">here</a></p>
 					<br>
 					<br>
 					<h1>Other</h1>
