--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@
 				<div class='projects content' id='content_projects'>
 					<h1>2048 Game</h1>
 					<a href="https://peggalex.github.io/test2048" target="_blank">https://peggalex.github.io/test2048</a>
-					<p>Comprehensive model/view/controller game that uses arrow key event listeners (controller) to update game state (model) and display it in an animated fluid ui (view).</p>
+					<p>Comprehensive model/view/controller game.</p>
+					<p> Use arrow key event listeners (controller) to update game state (model) and display it in an animated fluid ui (view).</p>
 					<br>
 					<br>
 					<h1>Simple grade calculator</h1>
@@ -422,9 +423,9 @@
 					<br>
 					<h1>HTML Resume</h1>
 					<a href="https://peggalex.github.io/resume3.html" target="_blank">https://peggalex.github.com/resume3.html</a>
-					<p>Resume stylized to look like an ide using a combination of syntax from different programming languages</p>
+					<p>Resume stylized to look like an ide using a combination of syntax from different programming languages.</p>
 					<p>Webfonts unpredictable in Safari, Firefox - recommend chrome or compiled pdf <a href="https://peggalex.github.io/alex_pegg_resume.pdf">here</a>.</p>
-					<p>Professional resume <a href='https://www.overleaf.com/read/kttybhdbwppk' target="_blank">here</a></p>
+					<p>Professional resume <a href='https://www.overleaf.com/read/kttybhdbwppk' target="_blank">here</a>.</p>
 					<br>
 					<br>
 					<h1>Other</h1>
