--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/> <!-- firefox throws an error without this -->
 	<style>
 		:root {
-			--skyBlue: deepskyblue;
+			--skyBlue: skyblue;
 			--grassGreen: #7FFFAB;
 			--darkGreen: #5DC967;
 			--svgWidth: 1000px;
@@ -193,7 +193,7 @@
 		}
 
 		#alex {
-			fill: white;
+			fill: deepskyblue;
 		}
 
 		h1 {
@@ -405,8 +405,7 @@
 				<div class='projects content' id='content_projects'>
 					<h1>2048 Game</h1>
 					<a href="https://peggalex.github.io/test2048" target="_blank">https://peggalex.github.io/test2048</a>
-					<p>Comprehensive model/view/controller game.</p>
-					<p> Use arrow key event listeners (controller) to update game state (model) and display it in an animated fluid ui (view).</p>
+					<p>Comprehensive model/view/controller game that uses arrow key event listeners (controller) to update game state (model) and display it in an animated fluid ui (view).</p>
 					<br>
 					<br>
 					<h1>Simple grade calculator</h1>
